# Practic7

./: README.md
exe/: CMakeLists.txt
exe/src/: test-shared-matrix.cpp
lib/: CMakeLists.txt
lib/src/: export.h  matrix.cpp  matrix.h
lib/src/c/: c_api.cpp  c_api.h
